2005-03-08  Neal H. Walfield  <neal@gnu.org>

	* physmem-user.h (hurd_pm_container_copy): New declaration.
	* physmem-user.c (enum container_ops): Add container_copy_id.
	(hurd_pm_container_copy): New function.

2005-01-11  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am: Initial check in.
	* README: Likewise.
	* frame.c: Likewise.
	* headers.m4: Likewise.
	* map.c: Likewise.
	* mm-init.c: Likewise.
	* mm.h: Likewise.
	* pager.c: Likewise.
	* physmem-user.c: Likewise.
	* physmem-user.h: Likewise.
	* priv.h: Likewise.
	* vm.c: Likewise.
	* vm.h: Likewise.