@@ -1,3 +1,9 @@
+2005-03-09  Neal H. Walfield  <neal@gnu.org>
+
+	* map.c: Include "vm.h".
+	(map_init): Cast HURD_STARTUP_ADDR to a uintptr_t.
+	* pager.c (pager): Comment fix.
+
 2005-03-08  Neal H. Walfield  <neal@gnu.org>
 
 	* physmem-user.h (hurd_pm_container_copy): New declaration.
